--- a/style.css
+++ b/style.css
@@ -107,3 +107,16 @@ header{
     top: 69%;
     left: 45%;
 }
+
+.centrarimg{
+    margin: 20px;
+
+}
+
+.centrarimg  img{
+    width:200px;
+    border-radius: 50%;
+    margin: 20px auto;
+    display: block;
+
+}
